--- a/src/app/Returns/Subviews/list-gross/list-gross.component.html
+++ b/src/app/Returns/Subviews/list-gross/list-gross.component.html
@@ -1,4 +1,5 @@
 <div *ngIf="this.pageReady == false" class="loading-indicator">
+  <mat-progress-spinner mode="indeterminate" color="accent"></mat-progress-spinner>
 </div>
 
 <div *ngIf="this.pageReady == true">
@@ -7,7 +8,10 @@
     <li *ngFor="let element of ListGrossArr">{{element.Date}}</li>
   </ul> -->
 
-
+  <h6> Client: {{this.ClientName}} - {{this.Client}} </h6>
+  <h6> Package: {{this.PackageName}} - {{this.PhaseTitle}} </h6>
+  <h6> Mail: {{this.MailCode}} - {{this.Description}} </h6>
+  <br>
   <table id="table1" mat-table [dataSource]="this.ListGrossArr">
     <ng-container matColumnDef="Date">
       <th mat-header-cell class="dateColumn" *matHeaderCellDef> Date </th>
@@ -59,10 +63,9 @@
       <td mat-cell *matCellDef="let element"><span class="totalColumn">{{element.TotalGross|currency:'USD':'symbol':'1.2-2'}}</span></td>
       <td mat-footer-cell *matFooterCellDef>{{getTotalValue("TotalGross")|currency:'USD':'symbol':'1.2-2'}}</td>
     </ng-container>
-    
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row class="example-element-row" *matRowDef="let row; columns: displayedColumns;"></tr>
     <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
-    </table>
+  </table>
 </div>
