--- a/src/app/Returns/main-returns/main-returns.component.html
+++ b/src/app/Returns/main-returns/main-returns.component.html
@@ -422,7 +422,7 @@
                         }">
                     <div style="width:100%">
                         <table id=table3 mat-table [dataSource]="mailType.CampaignList" multiTemplateDataRows matSort
-                            (matSortChange)="SortFunction($event, element)">
+                            (matSortChange)="SortFunction($event, mailType)">
                             <ng-container matColumnDef="Expand">
             <th mat-header-cell *matHeaderCellDef class="expandBtnColumn"></th>
             <td mat-cell *matCellDef="let campaign" class="expandBtnColumn">
@@ -680,7 +680,7 @@
                         }">
                     <div style="width:100%">
                         <table id=table4 mat-table [dataSource]="campaign.PhaseList" multiTemplateDataRows matSort
-                            (matSortChange)="SortFunction($event, element)">
+                            (matSortChange)="SortFunction($event, campaign)">
                             <ng-container matColumnDef="Expand">
             <th mat-header-cell *matHeaderCellDef class="expandBtnColumn"></th>
             <td mat-cell *matCellDef="let phase" class="expandBtnColumn">
@@ -963,8 +963,8 @@
                                 <span class="sPackageDoubling">Doubling Days ({{phase.DoublingDays}})</span>
                             </div>
                         </div>
-                        <table class="listTable" mat-table [dataSource]="phase.MailList" multiTemplateDataRows matSort
-                            (matSortChange)="SortFunction($event, element)">
+                        <table class="listTable" mat-table [dataSource]="phase.MailList" multiTemplateDataRows
+                            matSort (matSortChange)="SortFunction($event, phase)">
                             <ng-container matColumnDef="PseudoExpand">
             <th mat-header-cell *matHeaderCellDef class="pseudoExpand">
             </th>
@@ -1317,104 +1317,49 @@
     <!--In order to not have two scrollbars you need to put the inner elements to scroll and the parent to not scroll-->
     <div class="toolboxScrollContainer" [ngStyle]="{'visibility': visibility}">
 
-        <mat-form-field class="tbElement">
-            <input matInput #startDateInput (dateInput)="validateDate()" [matDatepicker]="startDatePicker" [(ngModel)]="startDate"
-                placeholder="start date">
-            <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
-            <mat-datepicker #startDatePicker></mat-datepicker>
-        </mat-form-field>
-        <mat-form-field class="tbElement">
-            <input matInput #endDateInput (dateInput)="validateDate()" [matDatepicker]="endDatePicker" [(ngModel)]="endDate"
-                placeholder="end date">
-            <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
-            <mat-datepicker #endDatePicker></mat-datepicker>
-        </mat-form-field>
-        <!-- Client - CL -->
-        <mat-form-field class="tbElement">
-            <mat-chip-list #CLchipList>
-                <mat-chip *ngFor="let client of CLList" [selectable]="selectable" [removable]="removable" (removed)="CL_Remove(client)">
-                    {{client}}
-                    <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
-                </mat-chip>
-                <input placeholder="Client..." #CLInput [formControl]="CLControl" [matAutocomplete]="CLauto"
-                    [matChipInputFor]="CLchipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-                    [matChipInputAddOnBlur]="addOnBlur" (matChipInputTokenEnd)="CL_Add($event)">
-            </mat-chip-list>
-            <mat-autocomplete #CLauto="matAutocomplete" (optionSelected)="CL_Selected($event)">
-                <mat-option class="md-custom-option" *ngFor="let client of CLfilteredOptions | async" [value]="client">{{client}}</mat-option>
-            </mat-autocomplete>
-        </mat-form-field>
+            <mat-form-field class="tbElement">
+                    <input matInput #startDateInput (dateInput)="validateDate()" [matDatepicker]="startDatePicker" [(ngModel)]="startDate"
+                        placeholder="start date">
+                    <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
+                    <mat-datepicker #startDatePicker></mat-datepicker>
+                </mat-form-field>
+                <mat-form-field class="tbElement">
+                    <input matInput #endDateInput (dateInput)="validateDate()" [matDatepicker]="endDatePicker" [(ngModel)]="endDate"
+                        placeholder="end date">
+                    <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
+                    <mat-datepicker #endDatePicker></mat-datepicker>
+                </mat-form-field>
 
-        <!-- Mail Type - MT -->
-        <mat-form-field class="tbElement">
-            <mat-chip-list #MTchipList>
-                <mat-chip *ngFor="let mailtype of MTList" [selectable]="selectable" [removable]="removable" (removed)="MT_Remove(mailtype)">
-                    {{mailtype}}
-                    <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
-                </mat-chip>
-                <input placeholder="Mail Type..." #MTInput [formControl]="MTControl" [matAutocomplete]="MTauto"
-                    [matChipInputFor]="MTchipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-                    [matChipInputAddOnBlur]="addOnBlur" (matChipInputTokenEnd)="MT_Add($event)">
-            </mat-chip-list>
-            <mat-autocomplete #MTauto="matAutocomplete" (optionSelected)="MT_Selected($event)">
-                <mat-option class="md-custom-option" *ngFor="let mailtype of MTfilteredOptions | async" [value]="mailtype">{{mailtype}}</mat-option>
-            </mat-autocomplete>
-        </mat-form-field>
+         <!-- Client - CL -->
+                        <mat-form-field class="tbElement">
+                            <mat-chip-list #CLchipList>
+                                <mat-chip *ngFor="let client of CLList"
+                                 [selectable]="selectable" 
+                                 [removable]="removable" 
+                                 (removed)="CL_Remove(client)">
+                                    {{client}}
+                                    <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+                                </mat-chip>
+                                <input placeholder="Client..." #CLInput 
+                                [formControl]="CLControl" 
+                                [matAutocomplete]="CLauto"
+                                [matChipInputFor]="CLchipList" 
+                                [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                                [matChipInputAddOnBlur]="addOnBlur" 
+                                (matChipInputTokenEnd)="CL_Add($event)">
+                            </mat-chip-list>
+                            <mat-autocomplete #CLauto="matAutocomplete" (optionSelected)="CL_Selected($event)">
+                                <mat-option class="md-custom-option" *ngFor="let client of CLfilteredOptions | async" [value]="client">{{client}}</mat-option>
+                            </mat-autocomplete>
+                        </mat-form-field>
+        
 
-        <!-- Campaign - CA -->
-        <mat-form-field class="tbElement">
-            <mat-chip-list #CAchipList>
-                <mat-chip *ngFor="let campaign of CAList" [selectable]="selectable" [removable]="removable" (removed)="CA_Remove(campaign)">
-                    {{campaign}}
-                    <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
-                </mat-chip>
-                <input placeholder="Campaign..." #CAInput [formControl]="CAControl" [matAutocomplete]="CAauto"
-                    [matChipInputFor]="CAchipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-                    [matChipInputAddOnBlur]="addOnBlur" (matChipInputTokenEnd)="CA_Add($event)">
-            </mat-chip-list>
-            <mat-autocomplete #CAauto="matAutocomplete" (optionSelected)="CA_Selected($event)">
-                <mat-option class="md-custom-option" *ngFor="let campaign of CAfilteredOptions | async" [value]="campaign">{{campaign}}</mat-option>
-            </mat-autocomplete>
-        </mat-form-field>
+        
+                       
+        
 
-        <!-- Phase - PH -->
-        <mat-form-field class="tbElement">
-            <mat-chip-list #PHchipList>
-                <mat-chip *ngFor="let phase of PHList" [selectable]="selectable" [removable]="removable" (removed)="PH_Remove(phase)">
-                    {{phase}}
-                    <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
-                </mat-chip>
-                <input placeholder="Phase..." #PHInput [formControl]="PHControl" [matAutocomplete]="PHauto"
-                    [matChipInputFor]="PHchipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-                    [matChipInputAddOnBlur]="addOnBlur" (matChipInputTokenEnd)="PH_Add($event)">
-            </mat-chip-list>
-            <mat-autocomplete #PHauto="matAutocomplete" (optionSelected)="PH_Selected($event)">
-                <mat-option class="md-custom-option" *ngFor="let phase of PHfilteredOptions | async" [value]="phase">{{phase}}</mat-option>
-            </mat-autocomplete>
-        </mat-form-field>
+        
 
-        <!-- 
-        <mat-form-field class="tbElement">
-            <mat-chip-list #chipList>
-                <mat-chip *ngFor="let client of clients"
-                 [selectable]="selectable" 
-                 [removable]="removable" 
-                 (removed)="remove(client)">
-                    {{client}}
-                    <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
-                </mat-chip>
-                <input placeholder="Client..." #clientListInput 
-                [formControl]="clientControl" 
-                [matAutocomplete]="auto"
-                [matChipInputFor]="chipList" 
-                [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-                [matChipInputAddOnBlur]="addOnBlur" 
-                (matChipInputTokenEnd)="add($event)">
-            </mat-chip-list>
-            <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selected($event)">
-                <mat-option class="md-custom-option" *ngFor="let client of filteredOptions | async" [value]="client">{{client}}</mat-option>
-            </mat-autocomplete>
-        </mat-form-field> -->
         <br>
         <div class="center-align">
             <button mat-raised-button color="accent" [disabled]="clients == '' || !validateDate()" (click)="applyChanges()">
