--- a/src/app/Returns/main-returns/main-returns.component.html
+++ b/src/app/Returns/main-returns/main-returns.component.html
@@ -422,7 +422,7 @@
                         }">
                     <div style="width:100%">
                         <table id=table3 mat-table [dataSource]="mailType.CampaignList" multiTemplateDataRows matSort
-                            (matSortChange)="SortFunction($event, element)">
+                            (matSortChange)="SortFunction($event, mailType)">
                             <ng-container matColumnDef="Expand">
             <th mat-header-cell *matHeaderCellDef class="expandBtnColumn"></th>
             <td mat-cell *matCellDef="let campaign" class="expandBtnColumn">
@@ -680,7 +680,7 @@
                         }">
                     <div style="width:100%">
                         <table id=table4 mat-table [dataSource]="campaign.PhaseList" multiTemplateDataRows matSort
-                            (matSortChange)="SortFunction($event, element)">
+                            (matSortChange)="SortFunction($event, campaign)">
                             <ng-container matColumnDef="Expand">
             <th mat-header-cell *matHeaderCellDef class="expandBtnColumn"></th>
             <td mat-cell *matCellDef="let phase" class="expandBtnColumn">
@@ -964,7 +964,7 @@
                             </div>
                         </div>
                         <table class="listTable" mat-table [dataSource]="phase.MailList" multiTemplateDataRows matSort
-                            (matSortChange)="SortFunction($event, element)">
+                            (matSortChange)="SortFunction($event, phase)">
                             <ng-container matColumnDef="PseudoExpand">
             <th mat-header-cell *matHeaderCellDef class="pseudoExpand">
             </th>
