--- a/src/app/Returns/main-returns/main-returns.component.scss
+++ b/src/app/Returns/main-returns/main-returns.component.scss
@@ -412,6 +412,13 @@ font-weight: bolder;
   margin-left:5%;
 }
 
+.mailcodeCell{
+  
+  word-wrap: break-word !important;
+  width: 100% !important;
+  overflow: visible;
+}
+
 
 // .tbHR{
 //   border-radius: 2px;
