--- a/src/app/Returns/main-returns/main-returns.component.html
+++ b/src/app/Returns/main-returns/main-returns.component.html
@@ -137,7 +137,7 @@
                 NLM</th>
             <td mat-cell *matCellDef="let client">
                 <span [ngClass]="{'negative':client.Measure.NLM < 0}" *ngIf="!client.Measure.Expanded">{{client.Measure.NLM|currency}}</span></td>
-            <td mat-footer-cell *matFooterCellDef><span [ngClass]="{'negative':this.rootReturns[0].Measure.NLM < 0}">{{
+           <td mat-footer-cell *matFooterCellDef><span [ngClass]="{'negative':this.rootReturns[0].Measure.NLM < 0}">{{
                     this.grandTotal.NLM|currency}}</span></td>
         </ng-container>
         <ng-container matColumnDef="CLM">
@@ -422,7 +422,7 @@
                         }">
                     <div style="width:100%">
                         <table id=table3 mat-table [dataSource]="mailType.CampaignList" multiTemplateDataRows matSort
-                            (matSortChange)="SortFunction($event, mailType)">
+                            (matSortChange)="SortFunction($event, element)">
                             <ng-container matColumnDef="Expand">
             <th mat-header-cell *matHeaderCellDef class="expandBtnColumn"></th>
             <td mat-cell *matCellDef="let campaign" class="expandBtnColumn">
@@ -547,7 +547,7 @@
                 New </th>
             <td mat-cell *matCellDef="let campaign"><span *ngIf="!campaign.Measure.Expanded">{{campaign.Measure.NewDonors|number}}</span></td>
             <td mat-footer-cell *matFooterCellDef [ngClass]="{
-                            'elementCollapsed': ReadyToCollapseAll(mailType.CampaignList) == false,
+                           'elementCollapsed': ReadyToCollapseAll(mailType.CampaignList) == false,
                             'elementExpanded':ReadyToCollapseAll(mailType.CampaignList) == true,
                             'elementLast': mailType.Measure.IsLast == true,
                             'campaignElementDefault': mailType.Measure.IsLast == false
@@ -680,7 +680,7 @@
                         }">
                     <div style="width:100%">
                         <table id=table4 mat-table [dataSource]="campaign.PhaseList" multiTemplateDataRows matSort
-                            (matSortChange)="SortFunction($event, campaign)">
+                            (matSortChange)="SortFunction($event, element)">
                             <ng-container matColumnDef="Expand">
             <th mat-header-cell *matHeaderCellDef class="expandBtnColumn"></th>
             <td mat-cell *matCellDef="let phase" class="expandBtnColumn">
@@ -693,7 +693,7 @@
             <th mat-header-cell *matHeaderCellDef [ngClass]="selectionMode? 'sbcShifted':'sbc'"></th>
             <td mat-cell *matCellDef="let phase" [ngClass]="selectionMode? 'sbcShifted':'sbc'">
                 <mat-checkbox class="md-checkbox" *ngIf="selectionMode == true" [(ngModel)]="phase.Measure.Selected"
-                    [(indeterminate)]="phase.Measure.Indeterminate" (change)="ToogleChecks(phase)"></mat-checkbox>
+                   [(indeterminate)]="phase.Measure.Indeterminate" (change)="ToogleChecks(phase)"></mat-checkbox>
             </td>
             <td mat-footer-cell *matFooterCellDef [ngClass]="selectionMode? 'sbcShifted':'sbc'"></td>
         </ng-container>
@@ -801,7 +801,7 @@
                 New
             </th>
             <td mat-cell *matCellDef="let phase"><span *ngIf="!phase.Measure.Expanded">{{phase.Measure.NewDonors|number}}</span></td>
-            <td mat-footer-cell *matFooterCellDef [ngClass]="{
+           <td mat-footer-cell *matFooterCellDef [ngClass]="{
                                      'elementCollapsed': ReadyToCollapseAll(campaign.PhaseList) == false,
                                      'elementExpanded':ReadyToCollapseAll(campaign.PhaseList) == true,
                                      'elementLast': campaign.Measure.IsLast == true,
@@ -963,8 +963,8 @@
                                 <span class="sPackageDoubling">Doubling Days ({{phase.DoublingDays}})</span>
                             </div>
                         </div>
-                        <table class="listTable" mat-table [dataSource]="phase.MailList" multiTemplateDataRows
-                            matSort (matSortChange)="SortFunction($event, phase)">
+                        <table class="listTable" mat-table [dataSource]="phase.MailList" multiTemplateDataRows matSort
+                            (matSortChange)="SortFunction($event, element)">
                             <ng-container matColumnDef="PseudoExpand">
             <th mat-header-cell *matHeaderCellDef class="pseudoExpand">
             </th>
@@ -988,7 +988,7 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="mailLevelColumn"> Mail
                 Code
             </th>
-            <td mat-cell *matCellDef="let mailList" class="mailLevelColumn"> {{mailList.MailCode}}
+            <td mat-cell *matCellDef="let mailList" class="mailLevelColumn"><div class="mailcodeCell"> {{mailList.MailCode}}</div>
             </td>
             <td mat-footer-cell *matFooterCellDef class="mailLevelColumn" [ngClass]="{
                              'listElementDefault': phase.Measure.IsLast == false,
@@ -1045,7 +1045,7 @@
             <td mat-footer-cell *matFooterCellDef [ngClass]="{
                              'listElementDefault': phase.Measure.IsLast == false,
                              'elementLast': phase.Measure.IsLast == true
-                         }">
+                        }">
                 {{phase.Measure.Mailed|date:'shortDate'}} </td>
         </ng-container>
         <ng-container matColumnDef="Caged">
@@ -1249,7 +1249,7 @@
 </ng-container>
 
 <tr mat-header-row [ngStyle]="{'visibility':mailType.CampaignList[0].Measure.Expanded?'collapse':'visible' }"
-    *matHeaderRowDef="campaignDisplayedColumns" [ngClass]="{
+   *matHeaderRowDef="campaignDisplayedColumns" [ngClass]="{
             'selectionBoxUnchecked': mailType.Measure.Selected == false
         }"></tr>
 <tr mat-row *matRowDef="let campaign; columns: campaignDisplayedColumns;" class="example-element-row" [ngClass]="{
@@ -1317,48 +1317,82 @@
     <!--In order to not have two scrollbars you need to put the inner elements to scroll and the parent to not scroll-->
     <div class="toolboxScrollContainer" [ngStyle]="{'visibility': visibility}">
 
-            <mat-form-field class="tbElement">
-                    <input matInput #startDateInput (dateInput)="validateDate()" [matDatepicker]="startDatePicker" [(ngModel)]="startDate"
-                        placeholder="start date">
-                    <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
-                    <mat-datepicker #startDatePicker></mat-datepicker>
-                </mat-form-field>
-                <mat-form-field class="tbElement">
-                    <input matInput #endDateInput (dateInput)="validateDate()" [matDatepicker]="endDatePicker" [(ngModel)]="endDate"
-                        placeholder="end date">
-                    <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
-                    <mat-datepicker #endDatePicker></mat-datepicker>
-                </mat-form-field>
+        <mat-form-field class="tbElement">
+            <input matInput #startDateInput (dateInput)="validateDate()" [matDatepicker]="startDatePicker" [(ngModel)]="startDate"
+                placeholder="start date">
+            <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
+            <mat-datepicker #startDatePicker></mat-datepicker>
+        </mat-form-field>
+        <mat-form-field class="tbElement">
+            <input matInput #endDateInput (dateInput)="validateDate()" [matDatepicker]="endDatePicker" [(ngModel)]="endDate"
+                placeholder="end date">
+            <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
+            <mat-datepicker #endDatePicker></mat-datepicker>
+        </mat-form-field>
+        <!-- Client - CL -->
+        <mat-form-field class="tbElement">
+            <mat-chip-list #CLchipList>
+                <mat-chip *ngFor="let client of CLList" [selectable]="selectable" [removable]="removable" (removed)="CL_Remove(client)">
+                    {{client}}
+                    <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+                </mat-chip>
+                <input placeholder="Client..." #CLInput [formControl]="CLControl" [matAutocomplete]="CLauto"
+                    [matChipInputFor]="CLchipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                    [matChipInputAddOnBlur]="addOnBlur" (matChipInputTokenEnd)="CL_Add($event)">
+            </mat-chip-list>
+            <mat-autocomplete #CLauto="matAutocomplete" (optionSelected)="CL_Selected($event)">
+                <mat-option class="md-custom-option" *ngFor="let client of CLfilteredOptions | async" [value]="client">{{client}}</mat-option>
+            </mat-autocomplete>
+        </mat-form-field>
 
-         <!-- Client - CL -->
-                        <mat-form-field class="tbElement">
-                            <mat-chip-list #CLchipList>
-                                <mat-chip *ngFor="let client of CLList"
-                                 [selectable]="selectable" 
-                                 [removable]="removable" 
-                                 (removed)="CL_Remove(client)">
-                                    {{client}}
-                                    <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
-                                </mat-chip>
-                                <input placeholder="Client..." #CLInput 
-                                [formControl]="CLControl" 
-                                [matAutocomplete]="CLauto"
-                                [matChipInputFor]="CLchipList" 
-                                [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-                                [matChipInputAddOnBlur]="addOnBlur" 
-                                (matChipInputTokenEnd)="CL_Add($event)">
-                            </mat-chip-list>
-                            <mat-autocomplete #CLauto="matAutocomplete" (optionSelected)="CL_Selected($event)">
-                                <mat-option class="md-custom-option" *ngFor="let client of CLfilteredOptions | async" [value]="client">{{client}}</mat-option>
-                            </mat-autocomplete>
-                        </mat-form-field>
-        
+        <!-- Mail Type - MT -->
+        <!-- <mat-form-field class="tbElement">
+            <mat-chip-list #MTchipList>
+                <mat-chip *ngFor="let mailtype of MTList" [selectable]="selectable" [removable]="removable" (removed)="MT_Remove(mailtype)">
+                    {{mailtype}}
+                    <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+                </mat-chip>
+                <input placeholder="Mail Type..." #MTInput [formControl]="MTControl" [matAutocomplete]="MTauto"
+                    [matChipInputFor]="MTchipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                    [matChipInputAddOnBlur]="addOnBlur" (matChipInputTokenEnd)="MT_Add($event)">
+            </mat-chip-list>
+            <mat-autocomplete #MTauto="matAutocomplete" (optionSelected)="MT_Selected($event)">
+                <mat-option class="md-custom-option" *ngFor="let mailtype of MTfilteredOptions | async" [value]="mailtype">{{mailtype}}</mat-option>
+            </mat-autocomplete>
+        </mat-form-field> -->
 
-        
-                       
-        
+        <!-- Campaign - CA -->
+        <!-- <mat-form-field class="tbElement">
+            <mat-chip-list #CAchipList>
+                <mat-chip *ngFor="let campaign of CAList" [selectable]="selectable" [removable]="removable" (removed)="CA_Remove(campaign)">
+                    {{campaign}}
+                    <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+                </mat-chip>
+                <input placeholder="Campaign..." #CAInput [formControl]="CAControl" [matAutocomplete]="CAauto"
+                    [matChipInputFor]="CAchipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                    [matChipInputAddOnBlur]="addOnBlur" (matChipInputTokenEnd)="CA_Add($event)">
+            </mat-chip-list>
+            <mat-autocomplete #CAauto="matAutocomplete" (optionSelected)="CA_Selected($event)">
+                <mat-option class="md-custom-option" *ngFor="let campaign of CAfilteredOptions | async" [value]="campaign">{{campaign}}</mat-option>
+            </mat-autocomplete>
+        </mat-form-field> -->
 
-        
+        <!-- Phase - PH -->
+        <!-- <mat-form-field class="tbElement">
+            <mat-chip-list #PHchipList>
+                <mat-chip *ngFor="let phase of PHList" [selectable]="selectable" [removable]="removable" (removed)="PH_Remove(phase)">
+                    {{phase}}
+                    <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+                </mat-chip>
+                <input placeholder="Phase..." #PHInput [formControl]="PHControl" [matAutocomplete]="PHauto"
+                    [matChipInputFor]="PHchipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                    [matChipInputAddOnBlur]="addOnBlur" (matChipInputTokenEnd)="PH_Add($event)">
+            </mat-chip-list>
+            <mat-autocomplete #PHauto="matAutocomplete" (optionSelected)="PH_Selected($event)">
+                <mat-option class="md-custom-option" *ngFor="let phase of PHfilteredOptions | async" [value]="phase">{{phase}}</mat-option>
+            </mat-autocomplete>
+        </mat-form-field> -->
+
 
         <br>
         <div class="center-align">
@@ -1412,7 +1446,7 @@
             chicken
             hamburger, tenderloin turkey rump ball tip sirloin frankfurter meatloaf boudin brisket ham hock. Hamburger
             venison
-            brisket tri-tip andouille pork belly ball tip short ribs biltong meatball chuck. Pork chop ribeye tail
+           brisket tri-tip andouille pork belly ball tip short ribs biltong meatball chuck. Pork chop ribeye tail
             short
             ribs, beef hamburger meatball kielbasa rump corned beef porchetta landjaeger flank. Doner rump frankfurter
             meatball
