--- a/src/app/Returns/Subviews/phase-gross/phase-gross.component.html
+++ b/src/app/Returns/Subviews/phase-gross/phase-gross.component.html
@@ -9,13 +9,14 @@
   <br>
   <h5>Caging history for {{this.PhaseGross.PackageName}} | {{this.PhaseGross.PackageTitle}}</h5>
   <br>
-  <mat-button-toggle-group name="tableOption" aria-label="Table Option">
-    <mat-button-toggle checked="true" (click)="tableVisibility()" value="cageDate">Date</mat-button-toggle>
-    <mat-button-toggle (click)="tableVisibility()" value="cageMailcode">Mailcode</mat-button-toggle>
+  <mat-button-toggle-group name="tableOption" aria-label="Table Option" #group="matButtonToggleGroup" (change)="tableVisibility(group.value)">
+    <mat-button-toggle checked="true" value="date">Date</mat-button-toggle>
+    <mat-button-toggle value="mailcode">Mailcode</mat-button-toggle>
   </mat-button-toggle-group>
 </div>
 
   <br>
+  <div></div>
 
   <!-- ****************************** -->
   <!-- Caging by date Table Start -->
@@ -76,7 +77,8 @@
     <tr mat-row class="example-element-row" *matRowDef="let row; columns: dateColumns;"></tr>
     <tr mat-footer-row *matFooterRowDef="dateColumns"></tr>
   </table>
-  <br>
+
+  
 
 
   <!-- ****************************** -->
@@ -84,9 +86,13 @@
   <!-- ****************************** -->
   <table *ngIf="mailcodeTableVis" id="table2" mat-table [dataSource]="this.PhaseGross.mailCodeList" multiTemplateDataRows>
       <ng-container matColumnDef="Expand">
-          <th mat-header-cell *matHeaderCellDef class="expBtnColumn"></th>
+          <th mat-header-cell *matHeaderCellDef="let element" class="expBtnColumn expBtnTH">
+            <button mat-icon-button (click)="ExpandAllMC(PhaseGross, PhaseGross.mailCodeList)" class="expandAllMailcodeButton">
+              <i class="material-icons md-elevation-z6" [ngClass]="allExpanded?'mi_arrow_drop_down':'mi_arrow_right'"></i>
+          </button>
+          </th>
           <td mat-cell *matCellDef="let element" class="expBtnColumn">
-              <button mat-icon-button (click)="ToggleExpansion(element)" class="mailcodeButton">
+              <button mat-icon-button (click)="ToggleExpansion(element, PhaseGross.mailCodeList)" class="mailcodeButton">
                   <i class="material-icons md-elevation-z6" [ngClass]="CollapseListBtn(element)?'mi_arrow_drop_down':'mi_arrow_right'"></i>
               </button>
           </td>
