--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -20,9 +20,19 @@
         <li class="nav-item mainNavItem">
           <button title="Under Construction" disabled="true" class="btn navbarBtn">Accounting</button>
         </li>
-        <li class="nav-item mainNavItem">
+        <!-- <li class="nav-item mainNavItem">
           <button title="Under Construction" disabled="true" class="btn navbarBtn">Utilities</button>
-        </li>
+        </li> -->
+              <li class="nav-item dropdown mainNavItem">
+        <button id="navbarDropdown" class="btn navbarDropdownBtn navbarBtn nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Utilities</button>
+        <div class="dropdown-menu navbarDropdownMenu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" routerLink="/whitemail">Client Whitemail</a>
+          <a class="dropdown-item" routerLink="/whitemail-new">New Whitemail</a>
+          <a class="dropdown-item">LRI</a>
+          <a class="dropdown-item">Incidentals</a>
+          </div>
+  
+      </li>
         <li class="nav-item mainNavItem">
           <button title="Under Construction" disabled="true" class="btn navbarBtn">User</button>
         </li>
